# SoyLuna

./: CMakeLists.txt  README.md  SoyLuna.sln  main.c
SoyLuna/: SoyLuna.vcxproj  SoyLuna.vcxproj.filters  config.h  game.c  game.h  game_screen.c  grid.c  grid.h  main.c  pentrufisiere.c  player.c  player.h  question.c  question.h  title_screen.c  utils.c  utils.h
SoyLuna/include/: config.h  game.h  utils.h
SoyLuna/src/: game.c  game_screen.c  main.c  utils.c
SoyLuna/x64/Debug/: SoyLuna.exe.recipe  SoyLuna.ilk  SoyLuna.vcxproj.FileListAbsolute.txt  game_screen.obj.enc  vc143.idb
SoyLuna/x64/Debug/SoyLuna.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SoyLuna.lastbuildstate  SoyLuna.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: SoyLuna.exp  SoyLuna.lib
